# nmpc-casadi

./: cartpole.py  nmpc_collocation.py  nmpc_multiple_shooting.py  nmpc_single_shooting.py  pyproject.toml  requirements.txt
solutions/: nmpc_collocation.py  nmpc_multiple_shooting.py  nmpc_single_shooting.py
