[tool.poetry]
name = "nmpc-casadi"
version = "0.1.0"
description = ""
authors = ["pierfabre <pierfa33@gmail.com>"]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
casadi = "^3.7.0"
matplotlib = "^3.10.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
